# gnuplot-wheel

./: .gitmodules  .pre-commit-config.yaml  README.md  RELEASE.md  build.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/actions/setup-build-deps/: README.md  action.yml
.github/scripts/: setup-linux.sh  setup-macos.sh
.github/workflows/: build.yml  ci.yml  main.yml  release.yml  test.yml
gnuplot_wheel/: __init__.py  __main__.py  build.py  gnuplot_proxy.py
