[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnuplot"
dynamic = ["version"]
description = "A Python wheel for gnuplot"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Xianpeng Shen", email = "xianpeng.shen@gmail.com" },
]
keywords = ["gnuplot", "plotting", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.scripts]
gnuplot = "gnuplot_wheel.gnuplot_proxy:main"

[project.urls]
Homepage = "https://github.com/shenxianpeng/gnuplot-wheel"
Repository = "https://github.com/shenxianpeng/gnuplot-wheel"
"Bug Tracker" = "https://github.com/shenxianpeng/gnuplot-wheel/issues"

[tool.setuptools]
packages = ["gnuplot_wheel"]

[tool.setuptools.package-data]
gnuplot_wheel = ["bin/gnuplot"]

[tool.setuptools_scm]
# It would be nice to include the commit hash in the version, but that
# can't be done in a PEP 440-compatible way.
version_scheme= "no-guess-dev"
# Test PyPI does not support local versions.
local_scheme = "no-local-version"
fallback_version = "0.0.0"
