[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnuplot"
dynamic = ["version"]
description = "A Python wheel for gnuplot"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Xianpeng Shen", email = "xianpeng.shen@gmail.com" },
]
keywords = ["gnuplot", "plotting", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.scripts]
gnuplot = "gnuplot_wheel.__main__:main"

[project.urls]
Homepage = "https://github.com/shenxianpeng/gnuplot-wheel"
Repository = "https://github.com/shenxianpeng/gnuplot-wheel"
"Bug Tracker" = "https://github.com/shenxianpeng/gnuplot-wheel/issues"

[tool.setuptools]
packages = ["gnuplot_wheel"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
# https://sourceforge.net/p/gnuplot/gnuplot-main/ref/master/tags/
fallback_version = "6.0.0"

[tool.setuptools.package-data]
gnuplot_wheel = ["bin/gnuplot", "bin/gnuplot.exe"]

[tool.cibuildwheel]
build-verbosity = 1
